overlaping headers fix

--- a/www/styles/themes/monokai/stylus/fileExplorer.styl
+++ b/www/styles/themes/monokai/stylus/fileExplorer.styl
@@ -66,7 +66,6 @@
 		height: 100%
 
 
-
 /* Find & Replace Overwrite */
 .tabs-content-wrapper .content-el .tr-layout-auto.tr-panel
 	height: 100%
@@ -96,8 +95,30 @@
 .tabs-header-wrapper
 	overflow: initial !important
 
-/* /Overwrite end ======================== */
 
+/* Overlaping Headers Fix */
+.selection-operation-header,
+.find-wrapper,
+.replace-wrapper
+	position: absolute
+	z-index: 1010
+	background-color: color1 !important
+	background: color1 !important
+	width: 100%
+	height: 56px !important
+	left: 0
+	right: 0
+
+.selection-operation-header,
+.find-wrapper
+	top: 0
+
+.replace-wrapper
+	bottom: 0
+
+
+
+/* /Overwrite end ======================== */
 
 
 
@@ -118,8 +139,6 @@ Share - Header ======================= */
 .goto-header,
 .notifications-header,
 .revisions-header,
-.find-wrapper,
-.selection-operation-header,
 .saveas-header,
 .share-header,
 .preferences-header
